--- a/apps/ytmp4.gg/src/styles/layout/header.css
+++ b/apps/ytmp4.gg/src/styles/layout/header.css
@@ -1,7 +1,7 @@
 /* Header */
 .site-header {
     position: relative;
-    z-index: 200;
+    z-index: 210;
     background: var(--background-hero-section);
     padding: 5px 0px;
     display: flex;
